fix fancybox z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -332,5 +332,5 @@
 }
 
 .fancybox__container {
-  z-index: 99999;
+  z-index: 999999 !important;
 }
